idea/testData/multiplatform/commonSealedWithPlatformInheritor/jvm/jvm.kt
class PlatfromDerived : <!SEALED_INHERITOR_IN_DIFFERENT_MODULE!>Base<!>() // must be an error

fun test_2(b: Base) = when (b) {
    is Derived -> 1
}
